fix: fix footer z-index

--- a/momentum/css/style.css
+++ b/momentum/css/style.css
@@ -737,6 +737,7 @@ input + .toggle-lang::after {
     position: absolute;
     padding-bottom: 40px;
     width: calc(100% - 40px);
+    z-index: -1;
   }
 	.quote {
 		margin-bottom: 20px;
